# installer-prompt

./: .gitignore  CMakeLists.txt  README.md  gen_ts.sh  lubuntu-installer-prompt.desktop  lubuntu-live-environment.desktop  panel.conf  patch  rc.xml
debian/: changelog  control  copyright  lintian-overrides
debian/source/: lintian-overrides
scripts/: change-system-language  lubuntu-installer  start-lubuntu-live-env
src/: backgroundscreen.cpp  backgroundscreen.h  connectionprogressdialog.cpp  connectionprogressdialog.h  connectionprogressdialog.ui  installerprompt.cpp  installerprompt.h  installerprompt.ui  languagechangedialog.cpp  languagechangedialog.h  languagechangedialog.ui  main.cpp  mainwindow.cpp  mainwindow.ui  resource.qrc  translations.qrc  warningdialog.ui  wifipassworddialog.cpp  wifipassworddialog.h  wifipassworddialog.ui
src/translations/: lubuntu-installer-prompt_ar.ts  lubuntu-installer-prompt_arn.ts  lubuntu-installer-prompt_ast.ts  lubuntu-installer-prompt_bg.ts  lubuntu-installer-prompt_ca.ts  lubuntu-installer-prompt_cs.ts  lubuntu-installer-prompt_cy.ts  lubuntu-installer-prompt_da.ts  lubuntu-installer-prompt_de.ts  lubuntu-installer-prompt_el.ts  lubuntu-installer-prompt_en_GB.ts  lubuntu-installer-prompt_en_US.ts  lubuntu-installer-prompt_eo.ts  lubuntu-installer-prompt_es.ts  lubuntu-installer-prompt_es_ES.ts  lubuntu-installer-prompt_es_VE.ts  lubuntu-installer-prompt_et.ts  lubuntu-installer-prompt_eu.ts  lubuntu-installer-prompt_fa.ts  lubuntu-installer-prompt_fi.ts  lubuntu-installer-prompt_fr.ts  lubuntu-installer-prompt_gl.ts  lubuntu-installer-prompt_he.ts  lubuntu-installer-prompt_hi.ts  lubuntu-installer-prompt_hr.ts  lubuntu-installer-prompt_hu.ts  lubuntu-installer-prompt_id.ts  lubuntu-installer-prompt_id_ID.ts  lubuntu-installer-prompt_it.ts  lubuntu-installer-prompt_ja.ts  lubuntu-installer-prompt_kk.ts  lubuntu-installer-prompt_ko.ts  lubuntu-installer-prompt_lt.ts  lubuntu-installer-prompt_lv.ts  lubuntu-installer-prompt_nb_NO.ts  lubuntu-installer-prompt_nl.ts  lubuntu-installer-prompt_oc.ts  lubuntu-installer-prompt_pl.ts  lubuntu-installer-prompt_pt.ts  lubuntu-installer-prompt_pt_BR.ts  (+12 more)
